--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format:check": "nx format:check",
     "update": "ng update @nrwl/workspace",
     "update:check": "ng update",
-    "workspace-schematic": "nx workspace-schematic",
+    "generate": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help"
   },
